--- a/src/index.css
+++ b/src/index.css
@@ -105,6 +105,7 @@ code {
   justify-content: space-between;
   color: rgb(255, 211, 211);
   border-bottom: 4px black solid;
+  z-index: 10000;
 }
 
 .Header-logo {
@@ -176,12 +177,14 @@ code {
 }
 .Travelers-homepage-div{
   position: fixed;
+  z-index: 10;
   background-color: rgba(199, 60, 60, 0.699);
   width: fit-content;
   color: rgb(29, 29, 29);
   display: flex;
   flex-direction: column;
   padding: 10px;
+  padding-bottom: 0;
   border-right: rgba(0, 0, 0, 0.678) 3px solid;
   top: 0 ;
   bottom: 0;
