--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+a{
+  text-decoration: none;
+  color: black;
+}
 .main-login-page-div{
   width: 100%;
   height: 100%;
