--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(to bottom, rgba(90, 25, 25), rgba(90, 25, 25),rgb(105, 30, 30), rgb(121, 36, 36), rgb(141, 47, 47), rgb(139, 56, 56),rgb(170, 72, 72),rgb(197, 99, 99));
+  background-repeat: none;
 }
 .medievalsharp-regular {
   font-family: "MedievalSharp", cursive;
@@ -240,15 +241,67 @@ a{
   font-size: 22px;
 }
 .Homepage-contents-divs{
-  background-color: brown;
+  background-color: rgb(175, 41, 41);
   font-size: 18px;
   padding: 10px;
-  padding-bottom: 30px;
   width: 600px;
   border: black solid 3px;
   border-radius: 10px;
+  text-align: center;
 }
 .Homepage-contents-divs:hover{
   border: rgba(0, 0, 0, 0.185) solid 3px;
   border-bottom: rgba(0, 0, 0, 0.767) solid 6px;
+}
+.Hompage-daily-input{
+  width: 300px;
+  height: 30px;
+  border: black solid 2px ;
+  border-radius: 10px;
+  margin-left: 25%;
+  display: block;
+}
+.Hompage-daily-submit{
+  border: rgb(0, 0, 0) solid 1px;
+  background-color: rgb(46, 43, 43);
+  color: white;
+  padding: 10px;
+  border-radius: 10px;
+  margin-top: 10px;
+}
+.travelors-info-div{
+  position: relative;
+  border: black solid 4px;
+  margin-top: 10px;
+  width: 97%;
+  margin-left: 1%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 60px;
+}
+.Traveler-Pic{
+  width: 30%;
+  max-width: 250px;
+  height: auto;
+  border: black solid 2px;
+  margin-left: 5%;
+}
+.Traveler-Bio{
+  border: rgb(0, 0, 0) solid 2px;
+  max-width: 400px;
+  max-height: 100px;
+  font-size: 20px;
+}
+.Traveler-Info{
+  padding-bottom: 30px;
+}
+.Edit-PB {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 10px; /* adjust padding as needed */
+  border-radius: 5px; /* adjust border radius as needed */
+  margin-bottom: 0;
+  cursor: pointer;
 }
