--- a/src/index.css
+++ b/src/index.css
@@ -305,3 +305,18 @@ a{
   margin-bottom: 0;
   cursor: pointer;
 }
+.ProfileBook-guilds-div{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+  align-items: center;
+}
+.PB-guilds-div{
+  border: black solid 2px;
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  gap: 10%;
+  align-items: center;
+}
