--- a/src/index.css
+++ b/src/index.css
@@ -221,10 +221,13 @@ a{
 .Travelers-hompage-search-h2{
   font-size: 20px;
   margin-left: -10px;
-  padding-left: 10px;
+  padding-left: 20px;
   padding-top: 20px;
   padding-bottom: 5px;
   padding-right: 18px;
+  color: rgb(2, 2, 2);
+  text-align: center;
+  font-weight: 700;
 }
 .Homepage-main-div {
   display: flex;
@@ -345,29 +348,44 @@ a{
   align-items: center;
 }
 .Find-travelers-main-div{
+  margin-top: 108px;
+  position: absolute;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
   gap: 40px;
+  background: linear-gradient(to bottom, #80ebd9, #3f5c9b);
+  top: 0;
+  bottom: 0;
 }
 .acc-status-div{
   font-size: 20px;
 }
 .Find-C-Span{
-  color: Brown;
+  color: rgb(97, 236, 155);
+  cursor: pointer;
 }
 .Current-Companions-grid {
+  margin-top: -30px;
   display: grid;
   grid-template-columns: repeat(3, minmax(300px, 1fr)); /* 4 columns with minimum width of 200px */
   grid-auto-rows: minmax(100px, auto); /* Adjust the minimum height of rows */
   grid-gap: 10px; /* Increase the gap between grid items */
-  width: 98vw; /* Full width */
-  background-color: rgb(112, 7, 7);
+  width: 94vw; /* Full width */
+  background-color: rgba(42, 44, 173, 0.144);
+  padding: 20px;
+  border: black 2px solid;
+  border-radius: 20px;
 }
-
 .companion-item {
-  border: 1px solid #ccc; /* Border for grid items */
+  background-color: rgba(10, 36, 109, 0.521); 
+  font-size: 18px;
+  border-radius: 10px;
   padding: 10px; /* Padding inside grid items */
   width: calc(100% - 20px); /* Make the grid items take up full width minus padding and border */
+}
+.companion-item:hover{
+  border: 2px solid rgba(0, 0, 0, 0.486);
+  border-bottom: 4px solid rgba(0, 0, 0, 0.774);
 }
