--- a/src/index.css
+++ b/src/index.css
@@ -241,13 +241,14 @@ a{
 }
 .PB-main-div{
   position: absolute;
-  padding-top: 30px;
+  padding-top: 0px;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   height: 100vh;
   background: linear-gradient(to bottom, #c38eda, #27054e);
+  overflow-y: auto;
 }
 .Homepage-content-div{
   width: 100%;
@@ -290,7 +291,7 @@ a{
 .travelors-info-div{
   position: relative;
   border: black solid 4px;
-  margin-top: 108px;
+  margin-top: 118px;
   width: 97%;
   margin-left: 1%;
   display: flex;
@@ -306,13 +307,13 @@ a{
   margin-left: 5%;
 }
 .Traveler-Bio{
-  border: rgb(0, 0, 0) solid 2px;
+  border: rgba(0, 0, 0, 0.384) solid 2px;
   width: 400px; /* Optionally limit the width */
   font-size: 20px;
   overflow: auto; /* Allow overflow when needed */
   white-space: pre-line; /* Allow line breaks */
   height: auto; /* Automatically adjust height to fit content */
-  padding: 10px;
+  padding: 5px;
 }
 .PB-dailyObj{
   margin-left: 200px;
@@ -362,16 +363,16 @@ a{
   align-items: center;
 }
 .Find-travelers-main-div{
-  padding-top: 108px;
-  position: absolute;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
   gap: 40px;
+  height: 100vh;
   background: linear-gradient(to bottom, #80ebd9, #3f5c9b);
-  top: 0;
-  bottom: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed; /* Add this line */
+  overflow-y: auto;
 }
 .acc-status-div{
   font-size: 20px;
