--- a/src/index.css
+++ b/src/index.css
@@ -104,7 +104,7 @@ a{
   font-size: 30px;
 }
 .Header-Main-Div {
-  position: absolute;
+  position: fixed;
   left: 0;
   right: 0;
   background-color: rgba(0, 0, 0, 0.541);
@@ -117,42 +117,43 @@ a{
 }
 
 .Header-logo {
-  width: 200px; /* Set width of logo */
+  width: 200px; 
   height: 100px;
 }
 
 .Header-title {
   flex: 1;
-  padding-right: 70px; /* Take remaining space */
-  text-align: center; /* Center the text */
+  padding-right: 70px;
+  text-align: center; 
 }
 
 .Header-menu {
   width: 80px; 
   height: 60px;
   padding-right: 20px;
-  text-align: right; /* Align text to the right */
+  text-align: right; 
   cursor: pointer;
 }
 .header-drop-down-menu {
   background-color: rgba(241, 241, 241, 0.897);
-  z-index: 100000000000000;
+  z-index: 10000;
   color: rgb(29, 29, 29);
   display: flex;
   flex-direction: column;
   width: fit-content;
   padding: 20px;
   position: fixed;
-  right: -300px; /* Start just outside the viewport */
-  top: 108px;
-  bottom: 0; /* Adjust as needed */
-  opacity: 0; /* Initially hide the menu */
-  transition: opacity 0.5s ease-in-out, right 0.5s ease-in-out; /* Apply transition for smooth appearance */
+  right: -300px; 
+  margin-top: 108px;
+  top: 0;
+  bottom: 0;
+  opacity: 0; 
+  transition: opacity 0.5s ease-in-out, right 0.5s ease-in-out; 
 }
 
 .show-menu {
-  right: 0; /* Slide into view */
-  opacity: 1; /* Make the menu visible */
+  right: 0; 
+  opacity: 1; 
 }
 .Menu-p-s{
   font-size: 20px;
@@ -319,11 +320,11 @@ a{
 }
 .Traveler-Bio{
   border: rgba(0, 0, 0, 0.384) solid 2px;
-  width: 400px; /* Optionally limit the width */
+  width: 400px; 
   font-size: 20px;
-  overflow: auto; /* Allow overflow when needed */
-  white-space: pre-line; /* Allow line breaks */
-  height: auto; /* Automatically adjust height to fit content */
+  overflow: auto; 
+  white-space: pre-line; 
+  height: auto; 
   padding: 5px;
 }
 .PB-dailyObj{
@@ -333,9 +334,9 @@ a{
   font-size: 20px;
 }
 .Bio-input{
-  min-width: 100px; /* Set initial minimum width */
-  width: auto; /* Let the input expand based on content */
-  max-width: 300px; /* Optional: Limit maximum width */
+  min-width: 100px;
+  width: auto; 
+  max-width: 300px; 
   font-size: 15px;
   min-height: 80px;
   max-height: 170px;
@@ -352,8 +353,8 @@ a{
   position: absolute;
   bottom: 40px;
   right: 0;
-  padding: 10px; /* adjust padding as needed */
-  border-radius: 5px; /* adjust border radius as needed */
+  padding: 10px; 
+  border-radius: 5px; 
   margin-bottom: 0;
   cursor: pointer;
 }
@@ -392,7 +393,7 @@ a{
   height: 100vh;
   background: linear-gradient(to bottom, #80ebd9, #3f5c9b);
   background-repeat: no-repeat;
-  background-attachment: fixed; /* Add this line */
+  background-attachment: fixed; 
   overflow-y: auto;
 }
 .acc-status-div{
@@ -408,10 +409,10 @@ a{
 .Current-Companions-grid {
   margin-top: -30px;
   display: grid;
-  grid-template-columns: repeat(3, minmax(300px, 1fr)); /* 4 columns with minimum width of 200px */
-  grid-auto-rows: minmax(100px, auto); /* Adjust the minimum height of rows */
-  grid-gap: 10px; /* Increase the gap between grid items */
-  width: 94vw; /* Full width */
+  grid-template-columns: repeat(3, minmax(300px, 1fr)); 
+  grid-auto-rows: minmax(100px, auto); 
+  grid-gap: 10px; 
+  width: 94vw;
   background-color: rgba(42, 44, 173, 0.144);
   padding: 20px;
   border: black 2px solid;
@@ -422,8 +423,8 @@ a{
   background-color: rgba(10, 36, 109, 0.521); 
   font-size: 18px;
   border-radius: 10px;
-  padding: 10px; /* Padding inside grid items */
-  width: calc(100% - 20px); /* Make the grid items take up full width minus padding and border */
+  padding: 10px; 
+  width: calc(100% - 20px); 
 }
 .companion-item:hover{
   border: 2px solid rgba(0, 0, 0, 0.486);
@@ -447,8 +448,8 @@ a{
   font-size: 18px;
   font-weight: 700;
   border-radius: 10px;
-  padding: 10px; /* Padding inside grid items */
-  width: calc(90% - 20px); /* Make the grid items take up full width minus padding and border */
+  padding: 10px; 
+  width: calc(90% - 20px); 
   color: rgb(224, 217, 217);
 }
 .companion-req-item:hover {
