--- a/src/index.css
+++ b/src/index.css
@@ -473,3 +473,15 @@ a{
   font-weight: 700;
   padding: 10px;
 }
+.blocked-div{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background: linear-gradient(to right, #4d0505, #b12c33);
+  font-size: 18px;
+  font-weight: 700;
+  border-radius: 10px;
+  padding: 10px; 
+  width: calc(90% - 20px); 
+  color: rgb(224, 217, 217);
+}
