--- a/src/index.css
+++ b/src/index.css
@@ -485,3 +485,15 @@ a{
   width: calc(90% - 20px); 
   color: rgb(224, 217, 217);
 }
+.Guild-reg-main-div{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  gap: 40px;
+  height: 100vh;
+  background: linear-gradient(to bottom, rgb(106, 125, 177), #14b953);
+  background-repeat: no-repeat;
+  background-attachment: fixed; 
+  overflow-y: auto;
+}
