--- a/src/index.css
+++ b/src/index.css
@@ -507,6 +507,7 @@ a{
   background-color: rgba(255, 255, 255, 0.363);
   width: 60vw;
   height: auto;
+  margin-bottom: 70px;
 }
 .Guild-inputs{
   width: 55%;
