--- a/src/index.css
+++ b/src/index.css
@@ -266,8 +266,9 @@ a{
 .Homepage-content-div{
   width: 100%;
   display: flex;
-  padding-left: 7%;
+  padding-right: 5%;
   flex-direction: column;
+  align-items: center;
   gap: 25px;
   color: black;
   font-size: 22px;
@@ -276,7 +277,7 @@ a{
   background-color: rgb(175, 41, 41);
   font-size: 18px;
   padding: 10px;
-  width: 600px;
+  width: 800px;
   border: black solid 3px;
   border-radius: 10px;
   text-align: center;
@@ -384,6 +385,15 @@ a{
   align-items: center;
   justify-content: center;
   gap: 30px;
+}
+.Save-color-btn{
+  font-size: 20px;
+  font-weight: 700;
+  position: absolute;
+  bottom: 10px;
+  cursor: pointer;
+  right: 45%;
+  padding: 10px; 
 }
 .Find-travelers-main-div{
   display: flex;
