--- a/src/index.css
+++ b/src/index.css
@@ -191,7 +191,18 @@ a{
   opacity: 0; 
   transition: opacity 0.5s ease-in-out, right 0.5s ease-in-out; 
 }
-
+.messages-span{
+  color: white;
+  background-color: rgb(230, 66, 66);
+  margin-left: 10px;
+  position: relative;
+  margin-bottom: -10px;
+  font-weight: 400;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 2px;
+  border-radius: 50%;
+}
 .show-menu {
   right: 0; 
   opacity: 1; 
