--- a/src/index.css
+++ b/src/index.css
@@ -652,3 +652,15 @@ a{
   background-attachment: fixed; 
   overflow-y: auto;
 }
+.Conversations-main-div{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  gap: 40px;
+  height: 100vh;
+  background: linear-gradient(to bottom, #bb80eb, #641094);
+  background-repeat: no-repeat;
+  background-attachment: fixed; 
+  overflow-y: auto;
+}
