--- a/src/index.css
+++ b/src/index.css
@@ -716,12 +716,13 @@ a{
 .messages-div {
   display: flex;
   flex-direction: row;
-  height: 100%;
+  height: 90%;
+  padding-top: 108px;
 }
 .left-side-with-Conversations {
   flex: 1;
+  height: 100%;
   max-width: 20%;
-  margin-top: 108px;
   border-right: black solid 4px;
   background-color: rgba(255, 255, 255, 0.096);
   display: flex;
@@ -731,13 +732,15 @@ a{
 }
 .right-side-with-messages {
   flex: 4;
-  margin-top: 108px;
   padding-left: 30px;
+  height: 100%;
   min-width: 80%;
   background-color: rgba(14, 14, 14, 0.37); /* Just for visualization */
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
+
 }
 .current-convos-messages{
   border: 2px solid black;
@@ -746,4 +749,32 @@ a{
   cursor: pointer;
   margin-top: 10px;
   height: 100px;
+}
+.current-conversation {
+  flex: 1;
+}
+
+.input-div {
+  width: 96%;
+  padding: 2%; /* Adjust padding as needed */
+  background-color: #f0f0f0; /* Optional background color */
+  position: absolute;
+  height: 60px;
+  bottom: 0;
+  right: 0;
+  z-index: 101010132923;
+}
+
+.messages-input {
+  margin-top: 10px;
+  width: calc(100% - 120px); /* Adjust width of input field */
+  height: 40px; /* Adjust height of input field */
+  margin-right: 10px; /* Adjust margin */
+}
+
+.send-btn {
+  width: 100px; /* Adjust width of button */
+  height: 60px; /* Adjust height of button */
+  position: relative;
+  top: -7px; /* Adjusted to move the button up by 10 pixels */
 }
