can now see read and sent values on own messages

--- a/src/index.css
+++ b/src/index.css
@@ -814,7 +814,7 @@ a{
 .message-left {
   text-align: left;
   display: block;
-  
+  margin-top: 30px;
 }
 .message-content{
   display: inline-flex;
