--- a/src/index.css
+++ b/src/index.css
@@ -482,6 +482,22 @@ a{
   border-radius: 20px;
   z-index: 0;
 }
+@media screen and (max-width: 930px) {
+  .Current-Companions-grid {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(300px, 1fr)); 
+    grid-auto-rows: minmax(100px, auto); 
+
+  }
+}
+@media screen and (max-width: 630px) {
+  .Current-Companions-grid {
+    display: grid;
+    grid-template-columns: repeat(1, minmax(300px, 1fr)); 
+    grid-auto-rows: minmax(100px, auto); 
+
+  }
+}
 .companion-item {
   background-color: rgba(10, 36, 109, 0.521); 
   font-size: 18px;
@@ -834,4 +850,16 @@ a{
   border-top-left-radius: 20px;
   border-bottom-right-radius: 20px;
   border-top-right-radius: 20px;
+}
+.Make-A-convo-grid{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 7px;
+  width: 98%;
+}
+@media screen and (max-width: 700px) {
+  .Make-A-convo-grid{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+  }
 }
