--- a/src/index.css
+++ b/src/index.css
@@ -911,6 +911,24 @@ a{
   font-size: 28px;
   font-family: 'Times New Roman', Times, serif;
 }
+.guild-Owner-tooltip{
+  background-color: rgba(0, 0, 0, 0.452);
+  color: white;
+  position: absolute;
+  margin-left: 20%;
+  padding: 10px;
+  border-radius: 15px;
+  margin-top: -8%;
+}
+.guild-elder-tooltip{
+  background-color: rgba(0, 0, 0, 0.452);
+  color: white;
+  position: absolute;
+  margin-left: 20%;
+  padding: 10px;
+  border-radius: 15px;
+  margin-top: -8%;
+}
 .guild-member-tooltip{
   background-color: rgba(0, 0, 0, 0.452);
   color: white;
