--- a/src/index.css
+++ b/src/index.css
@@ -960,3 +960,19 @@ a{
   position: absolute;
   bottom: 0;
 }
+.Guild-stats-popup{
+  display: flex;
+  flex-direction: column;
+  gap: 4%;
+  position: fixed;
+  top: 10%;
+  left: 10%;
+  right: 10%;
+  bottom: 10%;
+  background-color: rgba(255, 255, 255, 0.651);
+  border-radius: 5%;
+  font-size: 30px;
+  word-wrap: break-word;
+  padding: 20px;
+  font-weight: 500;
+}
