--- a/src/index.css
+++ b/src/index.css
@@ -926,14 +926,14 @@ a{
   border-radius: 15px;
   margin-top: -8%;
 }
-.guild-elder-tooltip{
+.guild-ban-tooltip{
   background-color: rgba(0, 0, 0, 0.452);
   color: white;
   position: absolute;
-  margin-left: 20%;
+  margin-left: 30%;
   padding: 10px;
   border-radius: 15px;
-  margin-top: -8%;
+  margin-top: 5%;
 }
 .guild-member-tooltip{
   background-color: rgba(0, 0, 0, 0.452);
