--- a/src/index.css
+++ b/src/index.css
@@ -1062,3 +1062,18 @@ a{
   flex-direction: column;
   align-items: center;
 }
+.guild-features-popup-main{
+  position: absolute;
+  top: 108px;
+  left: 20%;
+  right: 0%;
+  bottom: 0%;
+  background-color: rgb(90, 89, 89);
+  color: rgb(255, 255, 255);
+  font-size: 30px;
+  word-wrap: break-word;
+  padding: 20px;
+  display: flex; 
+  flex-direction: column;
+  gap: 30px;
+}
