--- a/src/index.css
+++ b/src/index.css
@@ -1117,3 +1117,18 @@ a{
   border-radius: 5px;
   padding: 10px;
 }
+.guild-Report-A-User {
+  position: absolute;
+  top: 128px;
+  left: 0%;
+  right: 0%;
+  bottom: 0%;
+  background-color: rgb(90, 89, 89);
+  color: rgb(255, 255, 255);
+  font-size: 30px;
+  word-wrap: break-word;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
