--- a/src/index.css
+++ b/src/index.css
@@ -1132,3 +1132,13 @@ a{
   flex-direction: column;
   align-items: center;
 }
+.report-list-divs{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 20px;
+  border: white solid 2px;
+  border-radius: 15px;
+  padding: 2%;
+  margin-bottom: 30px;
+}
