--- a/src/index.css
+++ b/src/index.css
@@ -1142,3 +1142,16 @@ a{
   padding: 2%;
   margin-bottom: 30px;
 }
+.warning-notif-number {
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 0px 6px;
+  margin-left: 8px;
+  font-size: 0.8em;
+}
+.warning-item {
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 15px;
+}
