--- a/src/index.css
+++ b/src/index.css
@@ -403,6 +403,15 @@ a{
   padding-bottom: 30px;
   width: 60%;
 }
+.Report-PB {
+  position: absolute;
+  bottom: -50px;
+  right: 40px;
+  padding: 10px; 
+  border-radius: 5px; 
+  margin-bottom: 0;
+  cursor: pointer;
+}
 .Edit-PB {
   position: absolute;
   bottom: 40px;
@@ -1155,4 +1164,17 @@ a{
   border: 1px solid #ddd;
   border-radius: 15px;
   margin-bottom: 10px;
+}
+.Report-A-User-popup-main{
+  position: absolute;
+  top: 108px;
+  left: 10%;
+  right: 10%;
+  bottom: 2%;
+  background-color: rgba(20, 19, 19, 0.836);
+  color: rgb(255, 255, 255);
+  font-size: 30px;
+  word-wrap: break-word;
+  padding: 20px;
+  border-radius: 20px;
 }
